# b64-ct

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/: install.sh  script.sh
src/: avx2.rs  lib.rs  lut_align64.rs  misc.rs  test_support.rs
src/decode/: avx2.rs  lut_align64.rs  mod.rs
src/encode/: avx2.rs  lut_align64.rs  mod.rs
tests/: decode.rs  encode.rs
